--- a/server-api/package.json
+++ b/server-api/package.json
@@ -13,6 +13,7 @@
     "@types/bluebird": "^3.5.36",
     "@types/express": "^4.17.12",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/redis": "^2.8.30",
     "nodemon": "^2.0.7"
@@ -22,6 +23,7 @@
     "chalk": "^4.1.1",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "redis": "^3.1.2",
     "ts-node": "^10.0.0"
   }
