--- a/server-api/package.json
+++ b/server-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon --legacy-watch -e ts,js --exec \"node --inspect=0.0.0.0:5858 --experimental-worker --require ts-node/register src/app.ts\""
+    "dev": "nodemon --legacy-watch -e ts,js --exec \"node --inspect=0.0.0.0:5858 --experimental-worker --require ts-node/register src/app.ts\"",
+    "test": "jest --verbose ./src/test"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +13,20 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.24",
+    "@types/jest-json-schema": "^2.1.3",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/redis": "^2.8.30",
-    "nodemon": "^2.0.7"
+    "@types/supertest": "^2.0.11",
+    "install": "^0.13.0",
+    "jest": "^27.0.6",
+    "nodemon": "^2.0.7",
+    "npm": "^7.19.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "async-redis": "^2.0.0",
