--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,12 +9,12 @@
     location / {
       proxy_pass http://api;
     }
-
-    proxy_connect_timeout   1000;
-    proxy_send_timeout      1000;
-    proxy_read_timeout      1000;
-    send_timeout            1000;
-    client_body_timeout     1000;
+    client_max_body_size    1500M;
+    proxy_connect_timeout   60000;
+    proxy_send_timeout      60000;
+    proxy_read_timeout      60000;
+    send_timeout            60000;
+    client_body_timeout     60000;
 
   }
 
