--- a/server-api/package.json
+++ b/server-api/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon --legacy-watch -e ts,js --exec \"node --inspect=0.0.0.0:5858 --experimental-worker --require ts-node/register src/app.ts\"",
-    "test": "jest --verbose ./src/test"
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:start": "nodemon --legacy-watch -e ts,js --exec \"node --inspect=0.0.0.0:5858 --experimental-worker --require ts-node/register src/app.ts\"",
+    "dev:test": "jest --silent=true ./src/test"
   },
   "keywords": [],
   "author": "",
@@ -17,13 +18,16 @@
     "@types/jest-json-schema": "^2.1.3",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
+    "@types/mz": "^2.7.4",
     "@types/node": "^16.0.0",
     "@types/redis": "^2.8.30",
     "@types/supertest": "^2.0.11",
     "install": "^0.13.0",
     "jest": "^27.0.6",
+    "mz": "^2.7.0",
     "nodemon": "^2.0.7",
     "npm": "^7.19.1",
+    "npm-run-all": "^4.1.5",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
