--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ server-api/src/test.csv
 server-api/src/uploads/click_log.csv
 redis-storage-persistent/appendonly.aof
 redis-storage-persistent/temp-1.rdb
+redis-storage-persistent/dump.rdb
