--- a/server-api/package.json
+++ b/server-api/package.json
@@ -12,10 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bluebird": "^3.5.36",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.24",
-    "@types/jest-json-schema": "^2.1.3",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/mz": "^2.7.4",
@@ -33,12 +31,12 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "async-redis": "^2.0.0",
     "chalk": "^4.1.1",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "redis": "^3.1.2",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "util": "^0.12.4"
   }
 }
